# tiny-renderer

./: .gitignore  CMakeLists.txt  README.md
Dependencies/: CMakeLists.txt  common.h  loader.c  loader.h
Dependencies/glad/: CMakeLists.txt  glad.c  glad.h
Source/: CMakeLists.txt  Window.c  Window.h  commonTypes.h  loader.c  loader.h  main.c  main.h  stb_image_write.h  swap.h
